# vkguide

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile_commands.json  debug.sh
LibRenderer/: CMakeLists.txt
LibRenderer/include/: Engine.hpp  PipelineBuilder.hpp  Structs.hpp  Utils.hpp
LibRenderer/src/: Engine.cpp  PipelineBuilder.cpp  Utils.cpp
SDLApp/: CMakeLists.txt  main.cpp
shaders/: colored_triangle.frag  colored_triangle.vert  gradient.comp  gradient_color.comp  sky.comp
